--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "node-fetch": "^3.3.2",
     "proxy": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
