--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^3.3.2",
+    "path": "^0.12.7",
     "proxy": "^2.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.0",
     "react-scripts": "5.0.1",
     "react-social-icons": "^6.16.0",
+    "uuid": "^9.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
